fix(header): Fixed header spacing in functional flow

--- a/crowdsource-ui/src/views/common/header/header.css
+++ b/crowdsource-ui/src/views/common/header/header.css
@@ -71,7 +71,7 @@
 @media (max-width: 700px) {
   .beta-version {
     position: absolute;
-    bottom: -4px;
+    bottom: -6px;
     right: 1px;
     font-size: 8px;
   }
